# tts_webui_extension.maha_tts

./: README.md  pyproject.toml  setup.py
extension_maha_tts/: main.py
tts_webui_extension/maha_tts/: __init__.py  api.py  main.py  openai_api_adapter.py  test_api.py
